<resources>
    <string name="app_name">Marvel Verse</string>
    <string name="attribution">Data provided by &lt;a href="https://marvel.com"&gt;Marvel&lt;/a&gt;. © %d MARVEL</string>

    <string name="label_characters">Characters</string>
    <string name="label_comics">Comics</string>
    <string name="label_creators">Creators</string>
    <string name="label_events">Events</string>
    <string name="label_series">Series</string>
    <string name="label_stories">Stories</string>

    <string name="label_id">ID</string>
    <string name="label_description">Description</string>
    <string name="label_web">Web</string>
    <string name="label_format">Format</string>

    <string name="msg_no_description">(No description for the moment.)</string>

    <string name="desc_thumbnail">Thumbnail</string>

    <string name="hint_search">Type the beginning of the name/title</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>