<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_book_account"
            android:title="@string/label_characters" />
        <item
            android:id="@+id/nav_comics"
            android:icon="@drawable/ic_book_open_page"
            android:title="@string/label_comics" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_book_alphabet"
            android:title="@string/label_stories" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event"
            android:title="@string/label_events" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_bookshelf"
            android:title="@string/label_series" />
        <item
            android:id="@+id/nav_creators"
            android:icon="@drawable/ic_account_star"
            android:title="@string/label_creators" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_cog"
            android:title="@string/action_settings" />
    </group>
</menu>