<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.CharacterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <ImageView
                        android:id="@+id/img_thumbnail"
                        android:layout_width="140dp"
                        android:layout_height="215dp"
                        android:contentDescription="@string/desc_thumbnail"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_marvel" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="2"
                            android:maxLines="2"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="?android:attr/textColorPrimaryInverse"
                            tools:text="Title" />

                        <GridView
                            android:id="@+id/grid_dates"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            tools:listitem="@layout/grid_item"
                            android:numColumns="2"/>

                        <GridView
                            android:id="@+id/grid_creators"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            tools:listitem="@layout/grid_item"
                            android:numColumns="2"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="end">

                        <TextView
                            android:id="@+id/text_format"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textStyle="bold"
                            tools:text="Format" />

                        <TextView
                            android:id="@+id/text_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:layout_alignParentEnd="true"
                            tools:text="Comic ID" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_toStartOf="@+id/text_id"
                            android:text="@string/label_id"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:lines="1"
                        android:layout_marginTop="16dp"
                        android:textAllCaps="true"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:text="@string/label_description" />

                    <TextView
                        android:id="@+id/text_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="Description" />

                    <TextView
                        android:id="@+id/text_variant_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="Variant Description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:lines="1"
                        android:layout_marginTop="16dp"
                        android:textAllCaps="true"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:text="@string/label_web" />

                    <TextView
                        android:id="@+id/text_urls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="URLs" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_creators"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:shapeAppearance="@style/AppTheme.ButtonShape"
                style="@style/AppTheme.DetailsButton"
                android:text="@string/label_creators"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_characters"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:shapeAppearance="@style/AppTheme.ButtonShape"
                style="@style/AppTheme.DetailsButton"
                android:text="@string/label_characters"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_stories"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:shapeAppearance="@style/AppTheme.ButtonShape"
                style="@style/AppTheme.DetailsButton"
                android:text="@string/label_stories"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_events"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:shapeAppearance="@style/AppTheme.ButtonShape"
                style="@style/AppTheme.DetailsButton"
                android:text="@string/label_events"/>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>